# goit-ds-hw-02

./: README.md  pyproject.toml  seed.py  select.py  select_user_tasks.py  tasks.db  tasks.sql
