[project]
name = "goit-ds-hw-02"
version = "0.1.0"
description = ""
authors = [
    {name = "LyubovNesterchuk",email = "nesterchuklyubov@gmail.com"}
]
requires-python = ">=3.11"
dependencies = [
    "faker (>=40.15.0,<41.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
